<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/buttonSyncInbox"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:text="@string/buttonSyncInbox" android:layout_marginTop="25px"/>

    <Button
        android:id="@+id/buttonSyncSentbox"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonSyncSentbox" android:layout_marginTop="25px"/>

    <Button
        android:id="@+id/buttonSyncDrafts"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:text="@string/buttonSyncDrafts" android:layout_marginTop="25px"/>

</LinearLayout>